# python-cq

./: README.md  conftest.py  pyproject.toml
.github/actions/environment/: action.yml
cq/: __init__.py
cq/_core/: bus.py  command.py  dto.py  event.py  middleware.py  query.py
cq/middlewares/: retry.py
documentation/: fastapi-example.md  writing-application-layer.md
tests/core/: test_bus.py  test_middleware.py
tests/helpers/: history.py
tests/middlewares/: test_retry.py
